# MessageU

./: .gitignore  README.md
Client/: CMakeLists.txt  server.info
Client/include/: AESWrapper.h  Base64Wrapper.h  RSAWrapper.h  ServerHandler.h  ServerMsg.h  client.h  parseCmd.h  utils.h
Client/src/: AESWrapper.cpp  Base64Wrapper.cpp  RSAWrapper.cpp  ServerHandler.cpp  ServerMsg.cpp  client.cpp  main.cpp  parseCmd.cpp  utils.cpp
Server/: TODO.txt  constants.py  db.py  dbInit.py  defensive.db  protocol.py  server.py  utils.py
